# mecanumrover_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: display.launch
mecanum3_description/: CMakeLists.txt  package.xml
mecanum3_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
mecanum3_description/meshes/: bumpers_1.stl
mecanum3_description/urdf/: materials.xacro  mecanum3.xacro
rviz/: urdf.rviz
urdf/: mecanum3.xacro
